--- a/Theme.css
+++ b/Theme.css
@@ -1,5 +1,5 @@
-// CSS for the main input pages of the site
-//Tom Middleton
+/* CSS for the main input pages of the site
+Tom Middleton */
 
 body {
     margin-top: 0px;
