--- a/Theme.css
+++ b/Theme.css
@@ -26,6 +26,7 @@ background: linear-gradient(to bottom, #4c0068 18%,#68006d 51%,#330066 100%); /*
     margin: 0 auto 730px;
     min-width: 1000px;
     width: 90%;
+    padding-bottom:20px;
 }
 
 #subdiv {
@@ -149,6 +150,16 @@ button{
     margin-right:10px;
 }
 
+#submit{
+    background-color: #cc0066;
+    border: 2px solid #a20054;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px 15px 10px 10px;
+    text-shadow: 0 1px 2px #99165c;
+}
+
 button:hover,  submit:hover {
     background-color: #B00058;
         border: 2px solid #860043;
@@ -203,13 +214,8 @@ select{
     left: 5%;
     top: 63%;
 	text-align:left;
-	font-size:1.5em;
+	font-size:1em;
 	 
-}
-.advanceinputs {
-    font-size: 1.5em;
-    position: relative;
-    text-align: left;
 }
 
 
@@ -231,14 +237,18 @@ select{
     float: left;
     margin-left: 0;
     width: 50%;
+    font-size:1.2em;
 }
 
 #advancedinputs {
-    font-size: 1.5em;
+    font-size: 1.2em;
     left: 5%;
     position: relative;
     text-align: left;
     top: 63%;
+    font-size: 1.2em;
+    position: relative;
+    text-align: left;
 }
 
 #advance {
