--- a/Theme.css
+++ b/Theme.css
@@ -249,6 +249,7 @@ select{
     font-size: 1.2em;
     position: relative;
     text-align: left;
+	width:350px;
 }
 
 #advance {
@@ -318,6 +319,7 @@ font-size: 1.5em;
     margin-left: 10%;
     min-width: 1250px;
     width: 80%;
+	height:1100px;
 }
 
 .ui-tabs .ui-tabs-panel {
@@ -343,4 +345,56 @@ ul.tabs li.ui-tabs-active a, ul.tabs li.ui-tabs-selected a{ background-color:blu
 
 #room_list4 {
   display:none;
+}
+
+#adv_block {
+	display:block;
+	float:left;
+	margin-right:30px;
+	margin-bottom:30px;
+}
+
+#ad_pref1 {
+	display:block;
+}
+
+#ad_pref2 {
+	display:none;
+}
+
+#ad_pref3 {
+	display:none;
+}
+
+#ad_pref4 {
+	display:none;
+}
+
+#expand {
+    border-radius: 12px;
+    float: right;
+    font-size: 0.45em;
+    padding: 0;
+	margin-top: 5px;
+}
+#expand2 {
+    border-radius: 12px;
+    float: right;
+    font-size: 0.45em;
+    padding: 0;
+	margin-top: 5px;
+}
+#expand3 {
+    border-radius: 12px;
+    float: right;
+    font-size: 0.45em;
+    padding: 0;
+	margin-top: 5px;
+}
+#expand4 {
+    border-radius: 12px;
+    float: right;
+    font-size: 0.45em;
+    padding: 0;
+	margin-top: 5px;
 }
