--- a/Theme.css
+++ b/Theme.css
@@ -46,7 +46,7 @@ background: linear-gradient(to bottom, #4c0068 18%,#68006d 51%,#330066 100%); /*
 #top_style{
     background-color: #333;
     font-family: Helvetica,Arial,sans-serif;
-    font-size: 100%;	
+    font-size: 100%;
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
     height: 20px;
     padding: 6px 8px 8px;
@@ -108,19 +108,22 @@ a{
     width: 940px;
 }
 
+
+
 #header_style {
-	height: 114px;
+    height: 185px;
     margin: 0;
-    padding: 6px 8px 8px;
-    min-width:1200px;
-    width:100%;
+    min-width: 1200px;
+    padding-left: 1px;
+    width: 100%;
 }
+
 
 #title {
     float: left;
-    margin-left: 25%;
+    margin-left: 15%;
     margin-top: 30px;
-    width: 510px;
+    width: 700px;
 }
 
 #logo{
@@ -131,11 +134,13 @@ margin-top:20px;
 }
 
 #lboro_logo {
+ display: inline-block;
     float: right;
-    height: 65px;
-    padding-left: 65px ;
-    width: 270px;
-    display:inline-block;
+    height: 78px;
+    margin-right: 90px;
+	margin-top: 20px;
+    padding-left: 65px;
+    width: 340px;
 }
 
 button{
@@ -311,7 +316,7 @@ select{
 
 h1 {
 font-family: Verdana,Arial,sans-serif;
-font-size: 1.5em;
+font-size: 2em;
 }
 
 #tabs {
