--- a/Theme.css
+++ b/Theme.css
@@ -599,3 +599,14 @@ hr {
 	color:black;
 	text-decoration:underline;
 }
+
+#testTable  td {
+	border: 1px solid black;
+}
+
+#info {
+	width:40%;
+	height:400px;
+	position:relative;
+	background-color:#ffffff;
+}
