--- a/Theme.css
+++ b/Theme.css
@@ -170,6 +170,20 @@ margin-right:10px;
 border-radius: 15px;
 }
 
+#edit_button{
+background-color: #cc0066;
+border: 2px solid #a20054;
+color: #fff;
+font-size: 14px;
+font-weight: bold;
+padding: 1px 15px 1px 15px;
+text-shadow: 0 1px 2px #99165c;
+margin-left:10px;
+margin-right:10px;
+-webkit-border-radius: 15px;
+-moz-border-radius: 15px;
+border-radius: 15px;
+}
 
 
 button:hover, #submit:hover {
