--- a/Theme.css
+++ b/Theme.css
@@ -2,11 +2,12 @@
 Tom Middleton */
 
 body {
-background-color: #ececdb;
+background-color: #F7F7F0;
 margin: 0;
 overflow-x: hidden;
 width:99%;
 }
+
 
 .ui-widget-header {
 background: #4c0068; /* Old browsers */
@@ -207,10 +208,6 @@ position: relative;
 
 
 th {
-background: none repeat scroll 0 0 #cc0066;
-border-bottom: 2px solid #330066;
-border-right: 2px solid #cc0066;
-border-top: 2px solid #330066;
 color: #fff;
 font-size: 1.2em;
 font-weight: bold;
@@ -237,7 +234,7 @@ left: 5%;
 top: 63%;
 text-align:left;
 font-size:1em;
-background-color: #ECECDB;
+background-color: #F7F7F0;
 }
 
 
@@ -362,7 +359,7 @@ font-style:italic;
 }
 
 #tabs {
-background-color: #ececdb;
+background-color: #F7F7F0;
 clear: both;
 height: 1100px;
 margin-left: 0;
@@ -508,10 +505,8 @@ table {
 	overflow:hidden;
 }
 
-
-
 #content_wrap {
-background-color: #ececdb;
+background-color: #F7F7F0;
 clear: both;
 height: 1100px;
 margin-left: 0;
@@ -524,7 +519,7 @@ z-index:0;
 clear:both;
 z-index:99;
 width:1400px;
-background-color: #ececdb;
+background-color: #F7F7F0;
 }
 
 #page_wrap {
@@ -615,14 +610,23 @@ hr {
 	text-decoration:underline;
 }
 
-#testTable  td {
-	border: 1px solid black;
+#testTable  p {
+	background-image: linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,0));
+	background-color: #DDC9DD;
+    box-shadow: 0 0 0 1px #600060;
+	border:1px solid  #600060;
+	border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+color:#3a003a;
+font-weight:bold;
 }
 
 #images_holder {
     position: relative;
     width: 100%;
-	top: 70px;
+	top: 20px;
+	min-width: 1500px;
 }
 
 #image_wrap {
@@ -638,3 +642,51 @@ hr {
 	float:left;
 	margin-right: 70px;
 }
+
+.sort {
+	margin-top: 20px;
+}
+
+#testTable {
+	-moz-border-radius-topright:22px;
+-webkit-border-top-right-radius:22px;
+border-top-right-radius:22px;
+
+-moz-border-radius-topleft:22px;
+-webkit-border-top-left-radius:22px;
+border-top-left-radius:22px;
+
+	-moz-border-radius-bottomright:22px;
+-webkit-border-bottom-right-radius:22px;
+border-bottom-right-radius:22px;
+
+-moz-border-radius-bottomleft:22px;
+-webkit-border-bottom-left-radius:22px;
+border-bottom-left-radius:22px;
+border-bottom: 1px solid  #c1c1c1;
+border-right: 1px solid  #c1c1c1;
+}
+
+#testTable th {
+border:1px solid  #c1c1c1;
+background:-o-linear-gradient(bottom, #600060 5%, #a801a8 100%); background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #600060), color-stop(1, #a801a8) );
+background:-moz-linear-gradient( center top, #600060 5%, #a801a8 100% );
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#600060", endColorstr="#a801a8"); background: -o-linear-gradient(top,#600060,a801a8);
+color:#fff;
+}
+
+#testTable td {
+	width:9.01%;
+}
+
+.day {
+	background-color:#f1f1f1;
+	border-right: 1px solid  #c1c1c1;
+	border-left: 1px solid  #c1c1c1;
+	height:135px;
+}
+
+#tableP {
+	color:white;
+}
+
