--- a/Theme.css
+++ b/Theme.css
@@ -34,11 +34,20 @@ width: 90%;
 padding-bottom:20px;
 }
 
-#subdiv {
-display:block;
-clear:both;
-z-index:99;
-float:right;
+div#subdiv {
+margin-left: 100em;
+}
+#subdiv > #submit {
+	background-color: #cc0066;
+	border: 2px solid #a20054;
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 10px 15px 10px 10px;
+	text-shadow: 0 1px 2px #99165c;
+	-webkit-border-radius: 15px;
+	-moz-border-radius: 15px;
+	border-radius: 15px;
 }
 
 
@@ -156,7 +165,7 @@ padding-left: 65px;
 width: 100%;
 }
 
-button, #submit{
+button{
 background-color: #cc0066;
 border: 2px solid #a20054;
 color: #fff;
@@ -171,13 +180,28 @@ margin-right:10px;
 border-radius: 15px;
 }
 
-#edit_button{
+#edit_button {
 background-color: #cc0066;
 border: 2px solid #a20054;
 color: #fff;
 font-size: 14px;
 font-weight: bold;
 padding: 1px 15px 1px 15px;
+text-shadow: 0 1px 2px #99165c;
+margin-left:10px;
+margin-right:10px;
+-webkit-border-radius: 15px;
+-moz-border-radius: 15px;
+border-radius: 15px;
+}
+
+#delete_button {
+background-color: #cc0066;
+border: 2px solid #a20054;
+color: #fff;
+font-size: 14px;
+font-weight: bold;
+padding:  1px 9px 1px 9px;
 text-shadow: 0 1px 2px #99165c;
 margin-left:10px;
 margin-right:10px;
@@ -301,7 +325,6 @@ float: right;
 margin-right: 60px;
 margin-top: 20px;
 }
-
 
 #newTable {
 float: right;
