--- a/Theme.css
+++ b/Theme.css
@@ -35,10 +35,10 @@ padding-bottom:20px;
 }
 
 div#subdiv {
-    margin-right: 10%;
+    margin-right: 180px;
+    margin-top: 360px;
     position: absolute;
     right: 0;
-    margin-top: 20%;
 }
 #subdiv > #submit {
 	background-color: #cc0066;
@@ -481,7 +481,7 @@ width:80%;
 }
 
 #module_title_select {
-    width: 85%;
+   width: 570px;
 }
 
 #tuesday {
@@ -489,15 +489,15 @@ margin-left:38px;
 }
 
 #time {
-width:100%;
+width: 135px;
 }
 
 #duration {
-width: 45%;
+width: 45px;
 }
 
 #noRooms{
-width: 18%;
+width: 45px;
 }
 
 textarea {
