--- a/Theme.css
+++ b/Theme.css
@@ -4,8 +4,8 @@ Tom Middleton */
 body {
 background-color: #F7F7F0;
 margin: 0;
-overflow-x: hidden;
 width:99%;
+padding-bottom: 100px;
 }
 
 
@@ -196,6 +196,8 @@ margin-right:10px;
 -webkit-border-radius: 15px;
 -moz-border-radius: 15px;
 border-radius: 15px;
+margin-bottom:5px;
+margin-top:2.5px;
 }
 
 #delete_button {
@@ -211,6 +213,7 @@ margin-right:10px;
 -webkit-border-radius: 15px;
 -moz-border-radius: 15px;
 border-radius: 15px;
+margin-top:2.5px;
 }
 
 
@@ -245,7 +248,7 @@ text-shadow: 0 1px 2px #99165c;
 select{
 font-size:20px;
 margin-left:auto;
-width:100px;
+width:120px;
 }
 .cell2 {
 border-left: 1.5px;
@@ -564,12 +567,12 @@ width: 1400px;
 
 #dataTable {
 width:1400px;
-border:1px solid #000000;
+border:1px solid #f1f1f1;
 overflow:hidden;
 -moz-border-radius-bottomleft:2px;
 -webkit-border-bottom-left-radius:2px;
 border-bottom-left-radius:2px;
-
+opacity: 0.75;
 -moz-border-radius-bottomright:2px;
 -webkit-border-bottom-right-radius:2px;
 border-bottom-right-radius:2px;
@@ -582,7 +585,7 @@ border-bottom-right-radius:2px;
 width:93.333px;
 max-width:93.333px;
 font-size:1em;
-border:1px solid #000000;
+border:1px solid #f1f1f1;
 overflow:hidden;
 }
 
@@ -690,6 +693,12 @@ font-weight:bold;
 	margin-top: 20px;
 }
 
+.day {
+	border-right: 1px solid  #c1c1c1;
+	border-left: 1px solid  #c1c1c1;
+	height:135px;
+}
+
 #testTable {
 	-moz-border-radius-topright:22px;
 -webkit-border-top-right-radius:22px;
@@ -708,6 +717,10 @@ border-bottom-right-radius:22px;
 border-bottom-left-radius:22px;
 border-bottom: 1px solid  #c1c1c1;
 border-right: 1px solid  #c1c1c1;
+
+-webkit-box-shadow: 6px 7px 5px 0px rgba(148,148,148,0.65);
+-moz-box-shadow: 6px 7px 5px 0px rgba(148,148,148,0.65);
+box-shadow: 6px 7px 5px 0px rgba(148,148,148,0.65);
 }
 
 #testTable th {
@@ -720,16 +733,64 @@ color:#fff;
 
 #testTable td {
 	width:9.01%;
-}
-
-.day {
-	background-color:#f1f1f1;
-	border-right: 1px solid  #c1c1c1;
-	border-left: 1px solid  #c1c1c1;
-	height:135px;
+	background-color:#F8F8F8;
+	border-bottom: 1px dotted #c1c1c1;
 }
 
 #tableP {
 	color:white;
 }
+
+#hours {
+    margin: 0 auto 15px;
+    width: 270px;
+}
+
+#dialog-form1, .ui-dialog-content {
+	position: absolute;
+	overflow: scroll;
+	height: 50px;
+}
+
+.ui-dialog-titlebar  > button {
+	margin-left:490px;
+	padding:5px;
+	margin-top:5px;
+	margin-bottom:5px;
+	
+}
+
+.ui-dialog{
+	border-top-left-radius: 40px;
+	border-top-right-radius: 40px;
+	margin-top: 100px;
+}
+
+.ui-dialog-title {
+	cursor:default;
+	margin-left:20px;
+	color:white;
+	font-weight: bold;
+}
+
+.ui-widget-overlay {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: #aaaaaa;
+opacity: 0.3;
+}
+
+.ui-front{
+	z-index:100;
+}
+
+
+
+
+
+
+
 
